manifests/base/viewer/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: geo-viewer-service
  namespace: 52north
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: geo-viewer
