manifests/base/viewer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    prometheus.io/port: '10254'
    prometheus.io/scrape: 'true'
  name: 52north-ingress-viewer
  namespace: 52north
spec:
  rules:
  - host: $(HOST_NAME)
    http:
      paths:
      - backend:
          service:
            name: geo-viewer-service
            port:
              number: 80
        pathType: ImplementationSpecific
        path: /geo-viewer(/|$)(.*)
